@@ -5,6 +5,8 @@
 - Polling performance increased
 - Fix: SYS_SERVICE_DOWN event was generated in place of SYS_SERVICE_UNKNOWN
 - Windows console: implemented desktop configuration save and restore
+- nxadm completely rewritten, and now allows to execute any command
+  available on server console in standalone mode
 
 
 *
